# python2_homeworks

./: Makefile  README.md  decorate_homework7.py  homework2.txt  homework8.py  main.py  my_dream.txt  oop_homework.py  oop_homework6.py  pyproject.toml  test_homework4.py
.github/workflows/: testing_coge.yml
utils/: homework4.py
