[tool.poetry]
name = "python2-homeworks"
version = "0.1.0"
description = ""
authors = ["Dmytro20099 <chagayda08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
passlib = "^1.7.4"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
